# ic-embedding

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json
scripts/: build.sh  export.py  requirements.txt  upload_model.sh
src/ic-embedding-backend/: Cargo.toml  ic-embedding-backend.did
src/ic-embedding-backend/assets/onnx/: config.json
src/ic-embedding-backend/src/: lib.rs  onnx.rs
