[package]
name = "ic-embedding-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-stable-structures = "0.6"
ic-wasi-polyfill = "0.3.17"
rust_tokenizers = { git = "https://github.com/alexjolly28/rust-tokenizers",version = "8.1.2" }
tract-onnx = { git = "https://github.com/sonos/tract", rev = "2a2914ac29390cc08963301c9f3d437b52dd321a" }
getrandom = { version = "0.2", features = ["js"] }
ndarray = "0.15.6"
bytes = "1.5.0"
prost = "0.11.0"
serde = "1"

